--- a/app/src/main/res/layout/individual_card.xml
+++ b/app/src/main/res/layout/individual_card.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<it.gmariotti.cardslib.library.view.CardViewNative
-    android:id="@+id/carddemo_thumb_url"
+<it.gmariotti.cardslib.library.view.CardViewNative android:id="@+id/list_cardId"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="12dp"
-    android:layout_marginRight="12dp"
-    card:card_layout_resourceID="@layout/native_card_thumbnail_layout"
-    android:layout_marginTop="12dp"
+    card:card_layout_resourceID="@layout/native_material_largeimage_card"
+    style="@style/card_external"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card="http://schemas.android.com/apk/res-auto" />
