Done with Authors:

--- a/app/src/main/res/layout/about_card_layout_1.xml
+++ b/app/src/main/res/layout/about_card_layout_1.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_centerVertical="true"
-            android:id="@+id/name">
+            android:id="@+id/aaditya">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -52,6 +52,162 @@
             android:id="@+id/more_apps"/>
 
 
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_centerVertical="true"
+            android:id="@+id/aswin">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dev_2_title"
+                android:textColor="@color/card_text_primary"
+                android:textSize="@dimen/font_normal"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dev_2_name"
+                android:textSize="@dimen/font_normal"/>
+
+
+        </LinearLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:background="?android:attr/selectableItemBackground"
+            android:text="@string/facebook"
+            android:textSize="@dimen/font_normal"
+            android:textStyle="normal"
+            android:textColor="@color/accent"
+            android:id="@+id/aswin_link"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_centerVertical="true"
+            android:id="@+id/amretanand">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dev_3_title"
+                android:textColor="@color/card_text_primary"
+                android:textSize="@dimen/font_normal"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dev_3_name"
+                android:textSize="@dimen/font_normal"/>
+
+
+        </LinearLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:background="?android:attr/selectableItemBackground"
+            android:text="@string/facebook"
+            android:textSize="@dimen/font_normal"
+            android:textStyle="normal"
+            android:textColor="@color/accent"
+            android:id="@+id/amretanand_link"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_centerVertical="true"
+            android:id="@+id/rahul">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dev_4_title"
+                android:textColor="@color/card_text_primary"
+                android:textSize="@dimen/font_normal"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dev_4_name"
+                android:textSize="@dimen/font_normal"/>
+
+
+        </LinearLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:background="?android:attr/selectableItemBackground"
+            android:text="@string/facebook"
+            android:textSize="@dimen/font_normal"
+            android:textStyle="normal"
+            android:textColor="@color/accent"
+            android:id="@+id/rahul_link"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_centerVertical="true"
+            android:id="@+id/sachin">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dev_5_title"
+                android:textColor="@color/card_text_primary"
+                android:textSize="@dimen/font_normal"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dev_5_name"
+                android:textSize="@dimen/font_normal"/>
+
+
+        </LinearLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:background="?android:attr/selectableItemBackground"
+            android:text="@string/facebook"
+            android:textSize="@dimen/font_normal"
+            android:textStyle="normal"
+            android:textColor="@color/accent"
+            android:id="@+id/sachin_link"/>
     </RelativeLayout>
 
 </LinearLayout>
