--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3195F3</color>
     <color name="colorPrimaryDark">#3195F3</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="card_text_primary">#000000</color>
 </resources>
