--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,11 @@
         <item name="android:layout_marginLeft">@dimen/about_card_margin_left</item>
         <item name="android:layout_marginRight">@dimen/about_card_margin_right</item>
     </style>
+
+    <style name="about_card_inner">
+        <item name="android:paddingTop">@dimen/card_expand_native_layout_padding_top</item>
+        <item name="android:paddingBottom">@dimen/card_expand_native_layout_padding_bottom</item>
+        <item name="android:paddingLeft">@dimen/card_expand_native_layout_padding_left</item>
+        <item name="android:paddingRight">@dimen/card_expand_native_layout_padding_right</item>
+    </style>
 </resources>
